--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                 <p><b>
                     <font face="Georgia" size="2">
                         <a name="Published Papers">Published Papers</a> (<a
-                            href="https://scholar.google.com/citations?user=DjP331sAAAAJ&hl=en" target=_blank> >>Google
-                        Scholar Citation Profile</a>)(<a href="https://xs2.dailyheadlines.cc/citations?hl=en&user=DjP331sAAAAJ" 
+                            href="https://scholar.google.com/citations?user=****=en" target=_blank> >>Google
+                        Scholar Citation Profile</a>)(<a href="https://********" 
 							 target=_blank>x+y</a>)(<a href="https://fan-csbio.github.io/servers.html" target=_blank>>>
                             Web Servers</a><img src="news.gif"/>)
                     </font>
@@ -97,8 +97,7 @@
             </td>
         </tr>
         <tr>
-            <td width="1178" valign="baseline" colspan="3"><br/><font face="Georgia" size="2"><b><i>Journal
-                Papers</i></b></font></td>
+            <td width="1178" valign="baseline" colspan="3"><br/><font face="Georgia" size="2"><b><i>Papers</i></b></font></td>
         </tr>
         <tr>
             <td width="1178" valign="baseline" colspan="3">
@@ -144,7 +143,7 @@
                                 [Download Citation with <a href="./papers/DeepnsSNPs-CILS-2021.ris" target=_blank>Endnote</a> or <a
                                         href="./papers/DeepnsSNPs-CILS-2021.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1016/j.chemolab.2021.104326" target=_blank>DOI</a>:10.1016/j.chemolab.2021.104326]
-                                [<a href="https://github.com/sera616/DeepnsSNPs.git" target=_blank>Github code link</a>]
+                                [<a href="https://github.com/sera0616/gefang-DeepnsSNPs.git" target=_blank>Github code link</a>]
                                 (<a herf="https://www.sciencedirect.com/science/article/abs/pii/S0169743921000940" target=_blank>WOS</a>: 000674505600013)
                             </font></li>
                         <li>
@@ -174,7 +173,7 @@
                                 [Download Citation with <a href="./papers/Iqbal-JCIM-2022.ris" target=_blank>Endnote</a> or <a
                                         href="./papers/Iqbal-JCIM-2022.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1021/acs.jcim.2c00799" target=_blank>DOI</a>:10.1021/acs.jcim.2c00799]
-                                [<a href="https://prost.erc.monash.edu/seq" target=_blank>Web Server</a>]
+                                [<a href="https://prost.erc.monash.edu/seq" target=_blank>Web Server:https://prost.erc.monash.edu/seq</a>]
                                 [<a href="https://github.com/ShahidIqb/PROST" target=_blank>Github code link</a>]
                                 (PMID: 35973091)<img src="news.gif"/>
                             </font></li>
@@ -201,8 +200,7 @@
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
                             <font face="Georgia" size="2">Ming-Cai Chen, Yang Li, Yi-Heng Zhu, <b>Fang Ge</b>, and Dong-Jun Yu<sup>#</sup>.
-                                <u>SSCpred: Single-Sequence-Based Protein Contact Prediction Using Deep Fully Convolutional Network</u> [J]. <b>Journal of Chemical Information and Modeling
-                                </b>, 2020, 60 (6): 3295−3303.
+                                <u>SSCpred: Single-Sequence-Based Protein Contact Prediction Using Deep Fully Convolutional Network</u> [J]. <b>Journal of Chemical Information and Modeling</b>, 2020,60(6):3295-3303.
                                 [Download Citation with <a href="./papers/Chen-mingcai-JCIM-2020.ris" target=_blank>Endnote</a> or <a
                                         href="./papers/Chen-mingcai-JCIM-2020.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1021/acs.jcim.9b01207" target=_blank>DOI</a>:10.1021/acs.jcim.9b01207]
@@ -239,6 +237,29 @@
                                 <!-- [<a href="http://csbio.njust.edu.cn/bioinf/sscpred/" target=_blank>Web Server</a>] -->
                                 (WOS: 000520658300001)<!-- <img src="news.gif"/> -->
                             </font></li> 
+                        <li>
+                        <p style="line-height: 150%; margin-top: 10px" align="justify">
+                            <font face="Georgia" size="2"><b>Fang Ge</b>, Arif Muhammad. 
+                                <u>Missense variants in human ACE2 May influence its binding interaction with SARS-CoV-2 and infectivity of COVID-19</u>[C]. 
+                                <b>Journal of Physics: Conference Series</b>, 2021, 1828(1): 012179.
+                                [Download Citation with <a href="./papers/Ge-COVID-19-2021.ris" target=_blank>Endnote</a> or <a
+                                        href="./papers/Ge-COVID-19-2021.txt" target=_blank>BibTex</a> Format]
+                                [<a href="https://doi.org/10.1088/1742-6596/1828/1/012179" target=_blank>DOI</a>:10.1088/1742-6596/1828/1/012179]
+                                [<a href="https://iopscience.iop.org/article/10.1088/1742-6596/1828/1/012179/meta" target=_blank>Paper link</a>]
+                            </font></li>
+
+                    <li>
+                        <p style="line-height: 150%; margin-top: 10px" align="justify">
+                            <font face="Georgia" size="2"><b>Fang Ge</b>, Arif Muhammad.
+                                <u>Functional variants in human ACE2 can decrease its protein stability and may influence the binding with SARS-CoV-2</u>. 
+                                <b>Journal of Physics: Conference Series</b>. 2021, 1828(1): 012180.
+                                [Download Citation with <a href="./papers/Ge-SARS-CoV-2-2021.ris" target=_blank>Endnote</a> or <a
+                                        href="./papers/Ge-SARS-CoV-2-2021.txt" target=_blank>BibTex</a> Format]
+                                [<a href="https://doi.org/10.1088/1742-6596/1828/1/012180" target=_blank>DOI</a>:10.1088/1742-6596/1828/1/012180]
+                                [<a href="https://iopscience.iop.org/article/10.1088/1742-6596/1828/1/012180/meta" target=_blank>Paper link</a>]
+                               </font></li>
+
+<!-- 
                 </ul>
             </td>
         </tr>
@@ -269,7 +290,7 @@
                                         href="./papers/Ge-SARS-CoV-2-2021.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1088/1742-6596/1828/1/012180" target=_blank>DOI</a>:10.1088/1742-6596/1828/1/012180]
                                 [<a href="https://iopscience.iop.org/article/10.1088/1742-6596/1828/1/012180/meta" target=_blank>Paper link</a>]
-                               </font></li>
+                               </font></li> -->
                 </ul>
                 <p><font face="Georgia" size="2">[<a href="#Fang_Ge">Back</a>]</font>
 		<!-- <p><font face="Georgia" size="2">[<a href="https://xueqiangfan.github.io/" target=_blank>Group Meeting</a>]</font> -->
