--- a/servers.html
+++ b/servers.html
@@ -278,7 +278,7 @@
 										<span style="font-family:georgia;font-size:12px;">
 											<span style="color:#0000ff;">
 												<a style="color:#0000ff;"
-                                                   href="http://csbio.njust.edu.cn/bioinf/mrmbert"
+                                                   href="http://csbio.njust.edu.cn/bioinf/****"
                                                    target="_blank"><strong>mrmbert</strong></a>
 											</span>
 											<br/>
@@ -316,7 +316,7 @@
                             <p style="text-align:left;">
 										<span style="font-family:georgia;font-size:12px;">
 											<span style="color:#0000ff;">
-												<a style="color:#0000ff;" href="https://github.com/sera616/DeepnsSNPs.git"
+												<a style="color:#0000ff;" href="https://github.com/sera0616/gefang-DeepnsSNPs.git"
                                                    target="_blank"><strong>DeepnsSNPs</strong></a>
 											</span>
 											<br/>
