--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 <u>TargetMM: Accurate Missense Mutation Prediction by Utilizing Local and Global Sequence Information with Classifier Ensemble</u> [J]. <b>Combinatorial Chemistry & High Throughput Screening</b>, 2022, 25(1), 38-52.
                                 [Download Citation with <a href="./papers/TargetMM-CCHTS-2022.ris" target=_blank>Endnote</a> or <a
                                         href="./papers/TargetMM-CCHTS-2022.ris.txt" target=_blank>BibTex</a> Format]
-                                [<a href="https://doi.org/10.2174/13862073236662012041404385" target=_blank>DOI</a>:10.2174/1386207323666201204140438]
+                                [<a href="https://doi.org/10.2174/1386207323666201204140438" target=_blank>DOI</a>:10.2174/1386207323666201204140438]
                                 [<a href="https://github.com/sera616/TargetMM.git" target=_blank>Github code link</a>]
                                 (WOS: 000737601100006)<!-- <img src="news.gif"/> -->
                             </font></li>                   
@@ -190,7 +190,7 @@
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
                             <font face="Georgia" size="2">Meng Zhang, Jian Zhao, Chen Li, <b>Fang Ge</b>,Jing Wu, Bin Jiang, Jiangning Song<sup>#</sup>, and Xiaofeng Song<sup>#</sup>.
-                                <u>csORF-finder: an effective ensemble learning framework for accurate identification of multi-species coding short open reading frames</u> [J]. <b>Briefings in Bioinformatics</b>, 2022;, bbac392.
+                                <u>csORF-finder: an effective ensemble learning framework for accurate identification of multi-species coding short open reading frames</u> [J]. <b>Briefings in Bioinformatics</b>, 2022, bbac392.
                                 [Download Citation with <a href="./papers/Zhang-meng-BIB-2022.ris" target=_blank>Endnote</a> or <a
                                         href="./papers/Zhang-meng-BIB-2022.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1093/bib/bbac392" target=_blank>DOI</a>:10.1093/bib/bbac392]
@@ -210,7 +210,7 @@
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
                             <font face="Georgia" size="2">Muhammad Arif, Saeed Ahmed, <b>Fang Ge</b>, Muhammad Kabir, Yaser Daanial Khan, Dong-Jun Yu<sup>#</sup>, Maha Thafar<sup>#</sup>.
-                                <u>Prediction of anticancer peptides by integrating optimized multiple feature descriptors with stacked ensemble approach</u> [J]. <b>Chemometrics and Intelligent Laboratory Systems </b>, 2022, 220: 104458.
+                                <u>StackACPred: Prediction of anticancer peptides by integrating optimized multiple feature descriptors with stacked ensemble approach</u> [J]. <b>Chemometrics and Intelligent Laboratory Systems</b>, 2022, 220: 104458.
                                 [Download Citation with <a href="./papers/Arif-StackACPred-2022.ris" target=_blank>Endnote</a> or <a
                                         href="./papers/Arif-StackACPred-2022.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1016/j.chemolab.2021.104458" target=_blank>DOI</a>:10.1016/j.chemolab.2021.104458]
