--- a/index.html
+++ b/index.html
@@ -76,10 +76,7 @@
         <tr>
             <td valign="baseline" colspan="3">
                 <p align="justify" style="line-height: 150%; margin-top: 10px">
-                    <font face="Georgia" size="3">Fang Ge received her M.S. degree from Anhui University. She is currently
-                        a Ph.D. candidate in the School of Computer Science and Engineering, Nanjing University of Science
-                        and Technology and a member of the Pattern Recognition and Bioinformatics Group. Her current interests
-                        include bioinformatics, pattern recognition, machine learning, and data mining.
+                    <font face="Georgia" size="3">Fang Ge received her M.S. degree from Anhui University and Ph.D. degree from Nanjing University of Science and Technology.She is a member of the Pattern Recognition and Bioinformatics Group. Her current interests include bioinformatics, pattern recognition, machine learning, and data mining.
 			<!-- Homepage in ZJUT: <a href="http://www.homepage.zjut.edu.cn/jun_csbio" target=_blank>http://www.homepage.zjut.edu.cn/jun_csbio</a></font></p> -->
                <!--  <p align="justify"><font face="Georgia" size="2">[<a href="#Fang_Ge">Back</a>]</font></td> -->
         </tr>
@@ -104,14 +101,48 @@
                 <ul>
                 <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
+                            <font face="Georgia" size="2"><b>Fang Ge</b>, Muhammad Arif, Zihao Yan, Apilak Worachartcheewan, Hanin Alahmadi, Dongjun Yu<sup>#</sup>, and Watshara Shoombuatong<sup>#</sup>.
+                                <u>Prediction of multiple types of RNA modifications via biological language model</u> [J]. 
+                                <b>Sumbitted</b>, 2023, *(*): ****.
+                                [Download Citation with <a href="./papers/mrmbert***.enw" target=_blank>Endnote</a> or <a
+                                        href="./papers/mrmbert-***.txt" target=_blank>BibTex</a> Format]
+                                [<a href="https://doi.org/10.1109/***" target=_blank>DOI</a>:10.1109/****]
+                                [<a href="http://202.119.84.36:3079/mmpatho/" target=_blank>Web Server</a>]
+                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)<img src="news.gif"/>
+                            </font></li>
+                        <li>
+                        <p style="line-height: 20px; margin-top: 10px" align="justify">
+                            <font face="Georgia" size="2">Ying Zhang, <b>Fang Ge</b>, Fuyi Li, Xibei Yang, Jiangning Song<sup>#</sup>, and Dong-Jun Yu<sup>#</sup>.
+                                <u>Prediction of multiple types of RNA modifications via biological language model</u> [J]. 
+                                <b>IEEE/ACM Transactions on Computational Biology and Bioinformatics</b>, 2023, *(*): ****.
+                                [Download Citation with <a href="./papers/mrmbert-zhangying-TCBB-2023.enw" target=_blank>Endnote</a> or <a
+                                        href="./papers/mrmbert-zhangying-TCBB-2023.txt" target=_blank>BibTex</a> Format]
+                                [<a href="https://doi.org/10.1109/TCBB.2023.3283985" target=_blank>DOI</a>:10.1109/TCBB.2023.3283985]
+                                [<a href="http://csbio.njust.edu.cn/bioinf/mrmbert/" target=_blank>Web Server</a>]
+                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)<img src="news.gif"/>
+                            </font></li>
+                        <li>
+                        <p style="line-height: 20px; margin-top: 10px" align="justify">
+                            <font face="Georgia" size="2">Ying Zhang, <b>Fang Ge</b>, Chen Li, Shahid Iqbal, Arif Muhammad, Fuyi Li, Maha A.Thafar, Zi-Hao Yan, Apilak Worachartcheewan, Xiaofeng Xu, Jiangning Song<sup>#</sup>, and Dong-Jun Yu<sup>#</sup>.
+                                <u>Prediction of multiple types of RNA modifications via biological language model</u> [J]. 
+                                <b>IEEE/ACM Transactions on Computational Biology and Bioinformatics</b>, 2023, *(*): ****.
+                                [Download Citation with <a href="./papers/mrmbert-zhangying-TCBB-2023.enw" target=_blank>Endnote</a> or <a
+                                        href="./papers/mrmbert-zhangying-TCBB-2023.txt" target=_blank>BibTex</a> Format]
+                                [<a href="https://doi.org/10.1109/TCBB.2023.3283985" target=_blank>DOI</a>:10.1109/TCBB.2023.3283985]
+                                [<a href="http://csbio.njust.edu.cn/bioinf/mrmbert/" target=_blank>Web Server</a>]
+                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)<img src="news.gif"/>
+                            </font></li>
+                        <li>
+
+                        <p style="line-height: 20px; margin-top: 10px" align="justify">
                             <font face="Georgia" size="2"><b>Fang Ge</b>, Chen Li, Shahid Iqbal, Arif Muhammad, Fuyi Li, Maha A.Thafar, Zi-Hao Yan, Apilak Worachartcheewan, Xiaofeng Xu, Jiangning Song<sup>#</sup>, and Dong-Jun Yu<sup>#</sup>.
                                 <u>VPatho: a deep learning-based two-step approach for accurate prediction of gain-of-function and loss-of-function variants</u> [J]. 
-                                <b>Briefings in Bioinformatics</b>, 2022, xx(xx): xx.
+                                <b>Briefings in Bioinformatics</b>, 2023, 24(1): bbab535.
                                 [Download Citation with <a href="./papers/VPatho-BIB-2022.enw" target=_blank>Endnote</a> or <a
                                         href="./papers/VPatho-BIB-2022.txt" target=_blank>BibTex</a> Format]
-                                [<a href="https://doi.org/10.1093/bib/bbabXXXXX" target=_blank>DOI</a>:10.1093/bib/bbabXXXXX]
+                                [<a href="https://doi.org/10.1093/bib/bbad019" target=_blank>DOI</a>:10.1093/bib/bbad019]
                                 [<a href="http://csbio.njust.edu.cn/bioinf/vpatho/" target=_blank>Web Server</a>]
-                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: XXXXX)<img src="news.gif"/>
+                                (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: 000911247800001)<img src="news.gif"/>
                             </font></li>
 		                <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
@@ -210,19 +241,18 @@
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
                             <font face="Georgia" size="2">Muhammad Arif, Saeed Ahmed, <b>Fang Ge</b>, Muhammad Kabir, Yaser Daanial Khan, Dong-Jun Yu<sup>#</sup>, Maha Thafar<sup>#</sup>.
-                                <u>StackACPred: Prediction of anticancer peptides by integrating optimized multiple feature descriptors with stacked ensemble approach</u> [J]. <b>Chemometrics and Intelligent Laboratory Systems</b>, 2022, 220: 104458.
+                                <u> Prediction of anticancer peptides by integrating optimized multiple feature descriptors with stacked ensemble approach</u> [J]. <b>Chemometrics and Intelligent Laboratory Systems</b>, 2022, 220: 104458.
                                 [Download Citation with <a href="./papers/Arif-StackACPred-2022.ris" target=_blank>Endnote</a> or <a
                                         href="./papers/Arif-StackACPred-2022.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1016/j.chemolab.2021.104458" target=_blank>DOI</a>:10.1016/j.chemolab.2021.104458]
                                 <!-- [<a href="http://csbio.njust.edu.cn/bioinf/sscpred/" target=_blank>Web Server</a>] -->
-                                (WOS: XXXXX)<img src="news.gif"/>
+                                (WOS: 000796888500002)<img src="news.gif"/>
                             </font></li>   
                         <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
                             <font face="Georgia" size="2">Muhammad Arif, Muhammad Kabir, Saeed Ahmad, <b>Fang Ge</b>, Adel Khelifi, Dong-Jun Yu<sup>#</sup>.
                                 <u>DeepCPPred: a deep learning framework for the discrimination of cell-penetrating peptides and their uptake efficiencies</u> [J]. <b>IEEE-ACM Transactions on Computational Biology and Bioinformatics</b>, 2021, 19(5): 2749-2759.
-                                [Download Citation with <a href="./papers/Arif-DeepCPPred-2021.ris" target=_blank>Endnote</a> or <a
-                                        href="./papers/Arif-DeepCPPred-2021.txt" target=_blank>BibTex</a> Format]
+                                [Download Citation with <a href="./papers/Arif-DeepCPPred-2021.ris" target=_blank>Endnote</a> or <ahref="./papers/Arif-DeepCPPred-2021.txt" target=_blank>BibTex</a> Format]
                                 [<a href="https://doi.org/10.1109/TCBB.2021.3102133" target=_blank>DOI</a>:10.1109/TCBB.2021.3102133]
                                 <!-- [<a href="http://csbio.njust.edu.cn/bioinf/sscpred/" target=_blank>Web Server</a>] -->
                                 (PMID: 34347603)<!-- <img src="news.gif"/> -->
