--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <li>
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
                             <font face="Georgia" size="2"><b>Fang Ge</b>, Muhammad Arif, Zihao Yan, Apilak Worachartcheewan, Hanin Alahmadi, Dongjun Yu<sup>#</sup>, and Watshara Shoombuatong<sup>#</sup>.
-                                <u>Prediction of multiple types of RNA modifications via biological language model</u> [J]. 
+                                <u>MMPatho: Interpretable Model with Multilevel Consensus and Evolutionary Information for Missense Mutation Pathogenic Prediction and Annotationl</u> [J]. 
                                 <b>Sumbitted</b>, 2023, *(*): ****.
                                 [Download Citation with <a href="./papers/mrmbert***.enw" target=_blank>Endnote</a> or <a
                                         href="./papers/mrmbert-***.txt" target=_blank>BibTex</a> Format]
@@ -122,7 +122,7 @@
                                 (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)<img src="news.gif"/>
                             </font></li>
                         <li>
-                        <p style="line-height: 20px; margin-top: 10px" align="justify">
+<!--                         <p style="line-height: 20px; margin-top: 10px" align="justify">
                             <font face="Georgia" size="2">Ying Zhang, <b>Fang Ge</b>, Chen Li, Shahid Iqbal, Arif Muhammad, Fuyi Li, Maha A.Thafar, Zi-Hao Yan, Apilak Worachartcheewan, Xiaofeng Xu, Jiangning Song<sup>#</sup>, and Dong-Jun Yu<sup>#</sup>.
                                 <u>Prediction of multiple types of RNA modifications via biological language model</u> [J]. 
                                 <b>IEEE/ACM Transactions on Computational Biology and Bioinformatics</b>, 2023, *(*): ****.
@@ -132,7 +132,7 @@
                                 [<a href="http://csbio.njust.edu.cn/bioinf/mrmbert/" target=_blank>Web Server</a>]
                                 (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)<img src="news.gif"/>
                             </font></li>
-                        <li>
+                        <li> -->
 
                         <p style="line-height: 20px; margin-top: 10px" align="justify">
                             <font face="Georgia" size="2"><b>Fang Ge</b>, Chen Li, Shahid Iqbal, Arif Muhammad, Fuyi Li, Maha A.Thafar, Zi-Hao Yan, Apilak Worachartcheewan, Xiaofeng Xu, Jiangning Song<sup>#</sup>, and Dong-Jun Yu<sup>#</sup>.
