--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <b>Sumbitted</b>, 2023, *(*): ****.
                                 [Download Citation with <a href="./papers/mrmbert***.enw" target=_blank>Endnote</a> or <a
                                         href="./papers/mrmbert-***.txt" target=_blank>BibTex</a> Format]
-                                [<a href="https://doi.org/10.1109/***" target=_blank>DOI</a>:10.1109/****]
+                                [<a href="https://doi.org/10.1021/acs.jcim.3c00950" target=_blank>DOI</a>:10.1021/acs.jcim.3c00950]
                                 [<a href="http://202.119.84.36:3079/mmpatho/" target=_blank>Web Server</a>]
                                 (<a herf="XXXXXXXXXX" target=_blank>WOS</a>: xxxxxx)<img src="news.gif"/>
                             </font></li>
