--- a/servers.html
+++ b/servers.html
@@ -23,8 +23,14 @@
         </tr>
         <tr>
             <td width="880" valign="middle" halign="left">
-						<span style="font-family:georgia;font-size:18px;">
-							<a name="Publications_">Bioinformatics Servers</a>&nbsp;(<strong>12</strong> Servers)</span></strong>
+                <!-- Logo -->
+                <img src="./images/Njupt_PR_BIO.jpg" alt="Logo" style="width: 100%; height: auto; display: block; margin: 0 auto;">
+
+                <br>
+
+                <!-- Text -->
+				<span style="font-family:georgia;font-size:18px;">
+				<a name="Publications_">Bioinformatics Servers</a>&nbsp;(<strong>12</strong> Servers)</span></strong>
                 </span>
                 <hr/>
             </td>
@@ -83,13 +89,13 @@
                                                         <br/>
                                                         <span style="color:#0000ff;"><strong>Description</span></strong>: Prediction of pathogenicity and function impact of missense mutation.
                                                         <br/>
-                                                        <span style="color:#0000ff;"><strong>Journal</strong></span>: <strong>Sumbitted</strong>
+                                                        <span style="color:#0000ff;"><strong>Journal</strong></span>: <strong>Online</strong>
                                                         <br/>
                                                         <span style="color:#0000ff;">
                                                             <strong>
-                                                                <a href="https://doi.org/10.1093/bioinformatics/babbXXX" target=_blank>DOI:</a>
+                                                                <a href="https://doi.org/10.1021/acs.jcim.3c00950" target=_blank>DOI:</a>
                                                             </strong>
-                                                        </span>&nbsp;10.1093/bioinformatics/babbXXX
+                                                        </span>&nbsp;10.1021/acs.jcim.3c00950
                                                         <br/>
                                                         <span style="color:#0000ff;"><strong>Year</strong></span>: <strong>2023</strong>
                                                     </span>
@@ -129,9 +135,9 @@
                                                         <br/>
                                                         <span style="color:#0000ff;">
                                                             <strong>
-                                                                <a href="https://doi.org/10.1093/bioinformatics/babbXXX" target=_blank>DOI:</a>
+                                                                <a href="https://doi.org/10.1093/bib/bbad019" target=_blank>DOI:</a>
                                                             </strong>
-                                                        </span>&nbsp;10.1093/bioinformatics/babbXXX
+                                                        </span>&nbsp;10.1093/bib/bbad019
                                                         <br/>
                                                         <span style="color:#0000ff;"><strong>Year</strong></span>: <strong>2022</strong>
                                                     </span>
